fix: adjusted heights to try to get content to fit on mobile screens with bars on them

--- a/components/atoms/Panel/panel.module.scss
+++ b/components/atoms/Panel/panel.module.scss
@@ -8,6 +8,7 @@
   z-index: 98;
   height: calc(100vh - 280px);
   overflow-y: scroll;
+  margin-bottom: 10px;
 }
 
 
